--- a/main.css
+++ b/main.css
@@ -38,9 +38,10 @@ body #pic{
 
 #story{
     position: relative;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     font-family: sans-serif;
     font-size: 20px;
+    height:40px;
     font-weight: 600;
 }
 
